after disconnect: enable submit button again.

--- a/view/adminhtml/templates/js.phtml
+++ b/view/adminhtml/templates/js.phtml
@@ -201,6 +201,7 @@
                         showSubmitButton();
                         hideDisconnectPopup();
                         showDisconnectedMsg();
+                        enableSubmitButton();
                     },
                     error: function() {
                         hideDisconnectPopup();
