--- a/view/adminhtml/templates/js.phtml
+++ b/view/adminhtml/templates/js.phtml
@@ -59,7 +59,7 @@
 
             function enableSubmitButton() {
                 $('.submit-btn').css('opacity', '1.0');
-                $('.submit-btn').attr('enabled', false);
+                $('.submit-btn').attr('disabled', false);
             }
 
             function disableSubmitButton() {
@@ -133,7 +133,9 @@
                     data: {'apiToken': spodSyncToken},
                     success: function (data) {
                         handleSuccess(data);
-                        setTimeout(refreshStatus, 5000);
+                        if (data.error === 0) {
+                            setTimeout(refreshStatus, 5000);
+                        }
                     },
                     error: function() {
                         hideLoader();
@@ -167,6 +169,7 @@
                 } else {
                     showSyncFinished();
                     showDisconnect();
+                    $('.syncing-data').hide();
                 }
             }
 
@@ -194,15 +197,18 @@
                     url: "<?php echo $this->getUrl('spodsync/ajax/disconnect') ?>",
                     method: 'GET',
                     data: {},
-                    success: function () {
-                        emptyTokenInput();
-                        hideDisconnect();
-                        hideSuccess();
-                        hideDateMsg();
-                        showSubmitButton();
-                        hideDisconnectPopup();
-                        showDisconnectedMsg();
-                        enableSubmitButton();
+                    success: function (data) {
+                        if (data.error === 1) {
+                            hideDisconnectPopup();
+                        } else {
+                            emptyTokenInput();
+                            hideDisconnect();
+                            hideSuccess();
+                            hideDateMsg();
+                            showSubmitButton();
+                            hideDisconnectPopup();
+                            showDisconnectedMsg();
+                        }
                     },
                     error: function() {
                         hideDisconnectPopup();
@@ -210,16 +216,7 @@
                 });
             }
 
-            // Entry points
-            $(function() {
-                $('.submit-btn').click(function () {
-                    disableSubmitButton();
-                    processToken();
-                });
-            });
-
             function refreshStatus() {
-                console.log("refresh");
                 jQuery.ajax({
                     url: "<?php echo $this->getUrl('spodsync/ajax/syncstatus') ?>",
                     method: 'GET',
@@ -231,16 +228,31 @@
                         }
                     }
                 });
-
             }
 
             $(document).ready(function () {
-                processToken();
+                let spodAPIKeyInput = $('.spodsync--apitoken');
+
+                $('.submit-btn').click(function () {
+                    disableSubmitButton();
+                    processToken();
+                });
+
+                disableSubmitButton();
+                spodAPIKeyInput.on('keydown paste input', function() {
+                    disableSubmitButton();
+                    if ($(this).val().length > 0) {
+                        enableSubmitButton();
+                    }
+                });
+
                 addModalOpenTrigger();
                 addModelCloseTrigger();
                 addDisconnectTrigger();
 
-                setTimeout(refreshStatus, 5000);
+                if (spodAPIKeyInput.val().length > 0) {
+                    refreshStatus();
+                }
             });
         });
 </script>
