--- a/view/adminhtml/web/css/main.css
+++ b/view/adminhtml/web/css/main.css
@@ -39,8 +39,8 @@
 
 .spodsync-main{float: left;width: 100%;}
 .spodsync-main * {margin: 0; padding: 0; box-sizing: border-box; }
-.spodsync-index-index{background:#f5f5f5; margin:0;font-family: 'Archivo'; box-sizing: border-box;}
-.spodsync-index-index .page-content{background:#f5f5f5; margin:0;font-family: 'Archivo'; box-sizing: border-box;}
+.spodsync-index-index .spodsync-status-container {background:#f5f5f5; margin:0;font-family: 'Archivo'; box-sizing: border-box;}
+.spodsync-index-index .page-content {background:#f5f5f5; margin:0;font-family: 'Archivo'; box-sizing: border-box;}
 .spodsync-index-index .main-wrp {
     max-width: 448px;flex-wrap: wrap; margin: auto; display: flex;display:-webkit-flex;
     align-items: center;clear: both; margin-top: 100px; margin-bottom: 50px;
@@ -49,7 +49,7 @@
 .spodsync-index-index .top-part .logo a, .top-part .logo img {   display: block;}
 .spodsync-index-index .top-part .logo img{margin: auto;}
 .spodsync-index-index .top-part .logo {   margin-bottom: 20px;}
-.spodsync-index-index .api-bx-main{ font-family: 'Archivo'; font-weight: normal;width: 100%; }
+.spodsync-index-index .api-bx-main { font-family: 'Archivo'; font-weight: normal;width: 100%; }
 .spodsync-index-index .api-bx-main .top-part h1{font-weight: normal;color: #161E2E;font-size: 30px; text-transform: capitalize;line-height: 1.2;}
 .spodsync-index-index .api-form-box{background: #ffffff;box-shadow: 0px 1px 3px #00000026;border-radius: 6px;padding: 40px 46px;}
 
@@ -76,6 +76,7 @@
 .spodsync-index-index .api-form-box .loader.syncing-data {   margin-top: 42px;}
 .spodsync-index-index .api-form-box input.error{border-color: #F8B4B4;color: #771D1D;}
 .spodsync-index-index .api-form-box .msg-error {   color: #E02424;}
+.spodsync-index-index .api-form-box .msg-unknown-error {   color: #E02424;}
 .spodsync-index-index .spodsyn-error-icn svg{display: block;}
 
 .spodsync-index-index .api-form-box .disconnect-part::before {content: ""; width: 100%; background: #E5E7EB; height: 1px; display: block; position: absolute; left: 0; margin-top: -36px; }
